# pylimma

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  publish.yml  tests.yml
benchmarks/: .gitignore  README.md  _setup_R_references.R  _setup_gse60450.py  run_benchmarks.ipynb  run_python.py  run_r.R
benchmarks/data/: all_small_targets.csv  yoruba_targets.csv
benchmarks/results/: profile_pipeline_a_yoruba.txt  python_20260417_darwin.json  python_20260421_darwin.json  r_20260417_darwin.json  r_20260421_darwin.json
data/: DATA_PROVENANCE.md  _setup_R_references.R  _setup_datasets.R  _setup_gse60450.py  generate_data.py  gse60450_targets.csv  mulvey_targets.csv  pasilla_targets.csv
data/R_references/: VERSIONS.txt
docs/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
docs/tutorials/: all_chiaretti.ipynb  gene_set_testing.rst  gse60450.ipynb  kang_pbmc.ipynb  mulvey.ipynb  pasilla.ipynb  proteomics.rst  voom_rnaseq.rst  yoruba.ipynb
docs/validation/: benchmarks.rst  fixtures.rst  known_differences.rst  parity_report.rst
examples/all_chiaretti/: all_R_vs_Python.ipynb  all_chiaretti_tutorial.ipynb
examples/gse60450/: gse60450_R_vs_Python.ipynb  gse60450_tutorial.ipynb
examples/kang_pbmc/: kang_pbmc_tutorial.ipynb
examples/mulvey/: mulvey_tutorial.ipynb
examples/pasilla/: pasilla_R_vs_Python.ipynb  pasilla_tutorial.ipynb
examples/yoruba/: yoruba_R_vs_Python.ipynb  yoruba_tutorial.ipynb
pylimma/: __init__.py  auroc.py  batch.py  classes.py  contrasts.py  decide_tests.py  dups.py  ebayes.py  enrichment.py  fitmixture_mod.py  genas.py  geneset.py  lmfit.py  normalize.py  plotting.py  selmod.py  splicing.py  squeeze_var.py  toptable.py  utils.py  voom.py  weights.py
tests/: helpers.py  test_classes.py  test_contrasts.py  test_decide_tests.py  test_dups.py  test_ebayes.py  test_lmfit.py  test_phase4_geneset.py  test_phase5.py  test_r_parity.py  test_squeeze_var.py  test_toptable.py  test_utils.py
(+472 files in other folders)
